--- a/po/fi_FI.po
+++ b/po/fi_FI.po
@@ -1,912 +1,206 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: grib_pi 2.2.1111\n"
+"Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-19 13:00+0000\n"
-"PO-Revision-Date: 2010-12-09 22:34+0200\n"
-"Last-Translator: Asko Laite <alaite@netti.fi>\n"
-"Language-Team: Asko Laite <alaite@netti.fi>\n"
-"Language: \n"
+"POT-Creation-Date: 2018-02-08 11:06-0300\n"
+"PO-Revision-Date: 2018-02-08 09:10-0500\n"
+"Last-Translator: nohal <pavel@kalian.cz>\n"
+"Language-Team: Finnish\n"
+"Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Finnish\n"
-"X-Poedit-Country: FINLAND\n"
-#
-msgid "      < 0.5 knots"
-msgstr ""
-#
-#, c-format
-msgid " width = %d height = %d\n"
-msgstr ""
-#
-#, c-format
-msgid " x = %d y = %d\n"
-msgstr ""
-#
-msgid ">= 0.5 and < 1.5"
-msgstr ""
-#
-msgid ">= 1.5 and < 2.5"
-msgstr ""
-#
-msgid ">= 2.5 and < 3.5"
-msgstr ""
-#
-msgid ">= 3.5 knots    "
-msgstr ""
-#
-msgid "About Tidal Arrows"
-msgstr ""
-#
-msgid "Cancel"
-msgstr ""
-#
-msgid "Date/Time"
-msgstr ""
-#
-msgid "Display tidal direction"
-msgstr ""
-#
-msgid "Display tidal rates (knots)"
-msgstr ""
-#
-msgid "Fill Colour"
-msgstr ""
-#
-msgid "Help"
-msgstr ""
-#
-msgid "High Resolution Display"
-msgstr ""
-#
-msgid "Next"
-msgstr ""
-#
-msgid "Now"
-msgstr ""
-#
-msgid "OK"
-msgstr ""
-#
-#
-#, fuzzy
-msgid "Preferences"
-msgstr "GRIB asetukset"
-#
-msgid "Previous"
-msgstr ""
-#
-msgid "START Date/Time"
-msgstr ""
-#
-msgid "Select"
-msgstr ""
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-msgid "Select a folder"
-msgstr "Valitse GRIB-hakemisto"
-#
-msgid "Select date/time for current prediction"
-msgstr ""
-#
-msgid "Step (Minutes)"
-msgstr ""
-#
-msgid ""
-"Tidal Current\n"
-"--------------------------------------------------------------\n"
-"\n"
-"\n"
-"\n"
-"\n"
-"\n"
-"Use this data with caution.\n"
-"Use in conjunction with Tidal Current Atlases and Tidal Diamonds\n"
-"\n"
-"--------------------------------------------------------------------\n"
-"\n"
-"Note: 1 Rates shown are for a position corresponding to the centre\n"
-"of the base of the arrow. Tidal rate is shown as knots.\n"
-"\n"
-msgstr ""
-#
-#, fuzzy
-msgid "Tidal Current Arrow Colour"
-msgstr "GRIB Näyttöohjaus"
-#
-#, fuzzy
-msgid "Tidal Current Control"
-msgstr "GRIB Näyttöohjaus"
-#
-msgid "Tidal Data Folder"
-msgstr ""
-#
-msgid "Tide Calendar"
-msgstr ""
-#
-msgid "Time:"
-msgstr ""
-#
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: crowdin.com\n"
+"X-Crowdin-Project: opencpn\n"
+"X-Crowdin-Language: fi\n"
+"X-Crowdin-File: /plugins/otcurrent_pi/po/otcurrent_pi.pot\n"
+
+#: src/otcurrentUIDialog.cpp:159
 msgid "Using Tide/Current data from:  "
+msgstr "Käytetään vuorovesi/virta tietoja lähteestä:  "
+
+#: src/otcurrentUIDialog.cpp:344
+msgid "Tidal Current\n"
+"------------------------------------------------------\n\n\n\n\n\n"
+"Use this data with caution.\n"
+"Use in conjunction with Tidal Current Atlases and Tidal Diamonds\n\n"
+"------------------------------------------------------\n\n"
+"Note: 1 Rates shown are for a position corresponding to the centre\n"
+"of the base of the arrow. Tidal rate is shown as knots.\n\n"
+msgstr "Vuorovesi virtaus\n"
+"--------------------------------------------------------------\n\n\n\n\n\n"
+"Käytä tätä tietoa varauksella. \n"
+"Käytä yhdessä vuorovesivitauskartastojen ja vuorovesi ruutujen kanssa\n\n"
+"--------------------------------------------------------------\n\n"
+"Huomaa: 1 Lukemat on näytetty sijainnin suhteessa perusnuolen keskustaan.\n"
+"Vuorovesilukema näytetään solmuina.\n\n"
+
+#: src/otcurrentUIDialog.cpp:345
+msgid "About Tidal Arrows"
+msgstr "Tietoja vuorovesi nuolista"
+
+#: src/otcurrentUIDialog.h:118
+msgid "Currents"
+msgstr "Virtaukset"
+
+#: src/otcurrentUIDialogBase.cpp:20
+msgid "Date/Time"
+msgstr "Päivämäärä/aika"
+
+#: src/otcurrentUIDialogBase.cpp:22
+msgid "Day"
+msgstr "Päivä"
+
+#: src/otcurrentUIDialogBase.cpp:35
+msgid "(UTC)"
 msgstr ""
-#
-#, fuzzy
+
+#: src/otcurrentUIDialogBase.cpp:42
+msgid "Now"
+msgstr "Nyt"
+
+#: src/otcurrentUIDialogBase.cpp:51
+msgid "Tidal Data Folder"
+msgstr "Vuorovesi Datakansio"
+
+#: src/otcurrentUIDialogBase.cpp:53
+msgid "Select a folder"
+msgstr "Valitse kansio"
+
+#: src/otcurrentUIDialogBase.cpp:60
+msgid "Step (Minutes)"
+msgstr "Väli (minuuttia)"
+
+#: src/otcurrentUIDialogBase.cpp:62
+msgid "60"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:62
+msgid "30"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:62
+msgid "15"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:71
+msgid "Help"
+msgstr "Ohje"
+
+#: src/otcurrentUIDialogBase.cpp:75
+msgid "Previous"
+msgstr "Edellinen"
+
+#: src/otcurrentUIDialogBase.cpp:81
+msgid "Next"
+msgstr "Seuraava"
+
+#: src/otcurrentUIDialogBase.cpp:131
+msgid "Display tidal rates (knots)"
+msgstr "Näytä vuorovesikertoimet (solmua)"
+
+#: src/otcurrentUIDialogBase.cpp:134
+msgid "Display tidal direction"
+msgstr "Näytä vuoroveden suunta"
+
+#: src/otcurrentUIDialogBase.cpp:137
+msgid "Fill Colour"
+msgstr "Täytä väri"
+
+#: src/otcurrentUIDialogBase.cpp:140
+msgid "High Resolution Display"
+msgstr "Korkean resoluution näyttö"
+
+#: src/otcurrentUIDialogBase.cpp:150
+msgid "Tidal Current Arrow Colour"
+msgstr "Vuorovesivirran nuolenväri"
+
+#: src/otcurrentUIDialogBase.cpp:158
+msgid "      < 0.5 knots"
+msgstr "      < 0,5 solmua"
+
+#: src/otcurrentUIDialogBase.cpp:165
+msgid ">= 0.5 and < 1.5"
+msgstr ">= 0.5 ja < 1.5"
+
+#: src/otcurrentUIDialogBase.cpp:172
+msgid ">= 1.5 and < 2.5"
+msgstr ">= 1.5 ja < 2.5"
+
+#: src/otcurrentUIDialogBase.cpp:179
+msgid ">= 2.5 and < 3.5"
+msgstr ">= 2.5 ja < 3.5"
+
+#: src/otcurrentUIDialogBase.cpp:186
+msgid ">= 3.5 knots    "
+msgstr ">= 3.5 solmua    "
+
+#: src/otcurrentUIDialogBase.cpp:200
+msgid "Arrow Scaling"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:208
+msgid "Scale   x"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "1"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "2"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "3"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "4"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "5"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "6"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "7"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "8"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "9"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "10"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.h:110
+msgid "Preferences"
+msgstr "Asetukset"
+
+#: src/otcurrent_pi.cpp:123 src/otcurrent_pi.cpp:126
 msgid "otcurrent"
-msgstr "Virran nopeus, solmua"
-#
-#, fuzzy
+msgstr "vuorovesivirtaus"
+
+#: src/otcurrent_pi.cpp:188
 msgid "otcurrent PlugIn for OpenCPN"
-msgstr "GRIB moduuli OpenCPN:lle"
-#
-msgid ""
-"otcurrent PlugIn for OpenCPN\n"
-"Provides an overlay of Tidal Current (Stream) Arrows.\n"
-"\n"
+msgstr "OpenCPN:n vuorovesivirtaus lisäosa"
+
+#: src/otcurrent_pi.cpp:194
+msgid "otcurrent PlugIn for OpenCPN\n"
+"Provides an overlay of Tidal Current (Stream) Arrows.\n\n"
 "\t\t\t   "
-msgstr ""
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "/Settings/otcurrent"
-#~ msgstr "Virran nopeus, solmua"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Colors"
-#~ msgstr "&Sulje"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Current"
-#~ msgstr "Virran nopeus, solmua"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Data Display Preferences"
-#~ msgstr "GRIB asetukset"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "GRIB"
-#~ msgstr "GRIB"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "GRIB File Directory"
-#~ msgstr "GRIB-tiedostohakemisto"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "Grib"
-#~ msgstr "Grib"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view invisible overlays:"
-#~ msgstr "Zoomaa ulos nähdäksesi GRIB merkitsevän aallonkorkeuden"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed Air Temp.(2m) GRIB"
-#~ msgstr "Zoomaa ulos nähdäksesi GRIB pintalämpötilan"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed CURRENT GRIB"
-#~ msgstr "Zoomaa ulos nähdäksesi GRIB virtatiedot"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed Clouds Cover GRIB"
-#~ msgstr "Zoomaa ulos nähdäksesi GRIB virtatiedot"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed Sea Surf.Temp. GRIB"
-#~ msgstr "Zoomaa ulos nähdäksesi GRIB pintalämpötilan"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed Total Rainfall GRIB"
-#~ msgstr "Zoomaa ulos nähdäksesi GRIB sadetiedon"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Pressure"
-#~ msgstr "Ilampaine, mbar"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Pressure (MSL)"
-#~ msgstr "Ilampaine, mbar"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Sea Temp"
-#~ msgstr "Meriveden pintalämpötila, C"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "Show GRIB icon"
-#~ msgstr "Näytä GRIB-ikoni"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Sign.Wave Height"
-#~ msgstr "Merkitsevä aallonkorkeus, m"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "Use High Definition Graphics"
-#~ msgstr "Käytä tarkkuusgrafiikkaa"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "WARNING:  QuickScat GRIB data is %d hours old."
-#~ msgstr "VAROITUS:  QuickScat GRIB data on %d tuntia vanhaa."
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Wind Direction(10m)"
-#~ msgstr "Tuulen suunta"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Wind Speed and Direction(10m)"
-#~ msgstr "Tuulen suunta"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Wind Speed(10m)"
-#~ msgstr "Tuulen nopeus, solmua"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "Wind Speed, Kts."
-#~ msgstr "Tuulen nopeus, solmua"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrent Settings"
-#~ msgstr "GRIB asetukset"
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentDialogPosX"
-#~ msgstr "Virran nopeus, solmua"
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentDialogPosY"
-#~ msgstr "Virran nopeus, solmua"
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentDialogSizeX"
-#~ msgstr "Virran nopeus, solmua"
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentDialogSizeY"
-#~ msgstr "Virran nopeus, solmua"
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentFolder"
-#~ msgstr "Virran nopeus, solmua"
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentInterval"
-#~ msgstr "Virran nopeus, solmua"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentUseDirection"
-#~ msgstr "GRIB asetukset"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentUseFillColour"
-#~ msgstr "GRIB asetukset"
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentUseRate"
-#~ msgstr "Virran nopeus, solmua"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "tcdata"
-#~ msgstr "GRIB Data"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid ""
-#~ "tcurrent PlugIn for OpenCPN\n"
-#~ "Provides basic tcurrent file overlay capabilities for several tcurrent "
-#~ "file types.\n"
-#~ "\n"
-#~ "Supported tcurrent file types include:\n"
-#~ "- wind direction and speed\n"
-#~ "- significant wave height\n"
-#~ "- sea surface temperature\n"
-#~ "- surface current direction and speed."
-#~ msgstr ""
-#~ "GRIB moduuli  OpenCPN:lle\n"
-#~ "Näyttää kartalla GRIB-tiedon usean tyyppisistä tiedostoista.\n"
-#~ "\n"
-#~ "Tukee seuraavia GRIB-tiedon sisältöjä:\n"
-#~ "- tuulen suunta ja nopeus\n"
-#~ "- merkitsevä aallonkorkeus\n"
-#~ "- pintaveden lämpötila\n"
-#~ "-virran nopeus ja suunta"
+msgstr "OpenCPN vuorovesilisäosa\n"
+"Tuottaa vuorovesivirran suuntanuolien päällyskerroksen.\n\n"
+"\t\t\t   "
+
