--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,865 +1,200 @@
-# OPENCPN TRANSLATION TO BRAZILIAN PORTUGUESE.
-# Copyright (C) 2000-2010 The OpenCPN Authors
-# This file is distributed under the same license as the PACKAGE package.
-# ELOI BARROS<eloibarros@hotmail.com>, 2010.
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: opencpn 2.1.0b620\n"
+"Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-19 13:00+0000\n"
-"PO-Revision-Date: 2010-06-25 19:44-0300\n"
-"Last-Translator: Eloi Barros <eloibarros@hotmail.com>\n"
-"Language-Team: \n"
-"Language: \n"
+"POT-Creation-Date: 2018-02-08 11:06-0300\n"
+"PO-Revision-Date: 2018-02-08 09:11-0500\n"
+"Last-Translator: nohal <pavel@kalian.cz>\n"
+"Language-Team: Portuguese, Brazilian\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Portuguese\n"
-"X-Poedit-Country: BRAZIL\n"
-"X-Poedit-SourceCharset: utf-8\n"
-#
-msgid "      < 0.5 knots"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: crowdin.com\n"
+"X-Crowdin-Project: opencpn\n"
+"X-Crowdin-Language: pt-BR\n"
+"X-Crowdin-File: /plugins/otcurrent_pi/po/otcurrent_pi.pot\n"
+
+#: src/otcurrentUIDialog.cpp:159
+msgid "Using Tide/Current data from:  "
+msgstr "Usando os dados de maré/corrente de:  "
+
+#: src/otcurrentUIDialog.cpp:344
+msgid "Tidal Current\n"
+"------------------------------------------------------\n\n\n\n\n\n"
+"Use this data with caution.\n"
+"Use in conjunction with Tidal Current Atlases and Tidal Diamonds\n\n"
+"------------------------------------------------------\n\n"
+"Note: 1 Rates shown are for a position corresponding to the centre\n"
+"of the base of the arrow. Tidal rate is shown as knots.\n\n"
 msgstr ""
-#
-#, c-format
-msgid " width = %d height = %d\n"
-msgstr ""
-#
-#, c-format
-msgid " x = %d y = %d\n"
-msgstr ""
-#
-msgid ">= 0.5 and < 1.5"
-msgstr ""
-#
-msgid ">= 1.5 and < 2.5"
-msgstr ""
-#
-msgid ">= 2.5 and < 3.5"
-msgstr ""
-#
-msgid ">= 3.5 knots    "
-msgstr ""
-#
+
+#: src/otcurrentUIDialog.cpp:345
 msgid "About Tidal Arrows"
+msgstr "Sobre as setas das marés"
+
+#: src/otcurrentUIDialog.h:118
+msgid "Currents"
 msgstr ""
-#
-msgid "Cancel"
-msgstr ""
-#
+
+#: src/otcurrentUIDialogBase.cpp:20
 msgid "Date/Time"
+msgstr "Data/Hora"
+
+#: src/otcurrentUIDialogBase.cpp:22
+msgid "Day"
 msgstr ""
-#
-msgid "Display tidal direction"
+
+#: src/otcurrentUIDialogBase.cpp:35
+msgid "(UTC)"
 msgstr ""
-#
-msgid "Display tidal rates (knots)"
+
+#: src/otcurrentUIDialogBase.cpp:42
+msgid "Now"
+msgstr "Agora"
+
+#: src/otcurrentUIDialogBase.cpp:51
+msgid "Tidal Data Folder"
+msgstr "Pasta de dados de marés"
+
+#: src/otcurrentUIDialogBase.cpp:53
+msgid "Select a folder"
+msgstr "Escolha uma pasta"
+
+#: src/otcurrentUIDialogBase.cpp:60
+msgid "Step (Minutes)"
+msgstr "Passo (minutos)"
+
+#: src/otcurrentUIDialogBase.cpp:62
+msgid "60"
 msgstr ""
-#
-msgid "Fill Colour"
+
+#: src/otcurrentUIDialogBase.cpp:62
+msgid "30"
 msgstr ""
-#
+
+#: src/otcurrentUIDialogBase.cpp:62
+msgid "15"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:71
 msgid "Help"
-msgstr ""
-#
+msgstr "Ajuda"
+
+#: src/otcurrentUIDialogBase.cpp:75
+msgid "Previous"
+msgstr "Anterior"
+
+#: src/otcurrentUIDialogBase.cpp:81
+msgid "Next"
+msgstr "Próximo"
+
+#: src/otcurrentUIDialogBase.cpp:131
+msgid "Display tidal rates (knots)"
+msgstr "Exibir taxas das marés (nós)"
+
+#: src/otcurrentUIDialogBase.cpp:134
+msgid "Display tidal direction"
+msgstr "Exibir a direção das marés"
+
+#: src/otcurrentUIDialogBase.cpp:137
+msgid "Fill Colour"
+msgstr "Preencher com cor"
+
+#: src/otcurrentUIDialogBase.cpp:140
 msgid "High Resolution Display"
 msgstr ""
-#
-msgid "Next"
-msgstr ""
-#
-msgid "Now"
-msgstr ""
-#
-msgid "OK"
-msgstr ""
-#
-msgid "Preferences"
-msgstr ""
-#
-msgid "Previous"
-msgstr ""
-#
-msgid "START Date/Time"
-msgstr ""
-#
-msgid "Select"
-msgstr ""
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-msgid "Select a folder"
-msgstr "Selecionar Diretório de Arquivos GRIB"
-#
-msgid "Select date/time for current prediction"
-msgstr ""
-#
-msgid "Step (Minutes)"
-msgstr ""
-#
-msgid ""
-"Tidal Current\n"
-"--------------------------------------------------------------\n"
-"\n"
-"\n"
-"\n"
-"\n"
-"\n"
-"Use this data with caution.\n"
-"Use in conjunction with Tidal Current Atlases and Tidal Diamonds\n"
-"\n"
-"--------------------------------------------------------------------\n"
-"\n"
-"Note: 1 Rates shown are for a position corresponding to the centre\n"
-"of the base of the arrow. Tidal rate is shown as knots.\n"
-"\n"
-msgstr ""
-#
-#
-#
-#, fuzzy
+
+#: src/otcurrentUIDialogBase.cpp:150
 msgid "Tidal Current Arrow Colour"
-msgstr "Controle da Apresentação GRIB"
-#
-#
-#
-#, fuzzy
-msgid "Tidal Current Control"
-msgstr "Controle da Apresentação GRIB"
-#
-msgid "Tidal Data Folder"
+msgstr "Cor da Seta da Corrente de Maré"
+
+#: src/otcurrentUIDialogBase.cpp:158
+msgid "      < 0.5 knots"
+msgstr "      < 0.5 nós"
+
+#: src/otcurrentUIDialogBase.cpp:165
+msgid ">= 0.5 and < 1.5"
+msgstr ">= 0.5 e < 1.5"
+
+#: src/otcurrentUIDialogBase.cpp:172
+msgid ">= 1.5 and < 2.5"
+msgstr ">= 1.5 e < 2.5"
+
+#: src/otcurrentUIDialogBase.cpp:179
+msgid ">= 2.5 and < 3.5"
+msgstr ">= 2.5 e < 3.5"
+
+#: src/otcurrentUIDialogBase.cpp:186
+msgid ">= 3.5 knots    "
+msgstr ">= 3.5 nós    "
+
+#: src/otcurrentUIDialogBase.cpp:200
+msgid "Arrow Scaling"
 msgstr ""
-#
-msgid "Tide Calendar"
+
+#: src/otcurrentUIDialogBase.cpp:208
+msgid "Scale   x"
 msgstr ""
-#
-msgid "Time:"
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "1"
 msgstr ""
-#
-msgid "Using Tide/Current data from:  "
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "2"
 msgstr ""
-#
-#
-#
-#, fuzzy
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "3"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "4"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "5"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "6"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "7"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "8"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "9"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.cpp:212
+msgid "10"
+msgstr ""
+
+#: src/otcurrentUIDialogBase.h:110
+msgid "Preferences"
+msgstr "Preferências"
+
+#: src/otcurrent_pi.cpp:123 src/otcurrent_pi.cpp:126
 msgid "otcurrent"
-msgstr "Velocidade da Corrente, Nós."
-#
+msgstr "otcurrent"
+
+#: src/otcurrent_pi.cpp:188
 msgid "otcurrent PlugIn for OpenCPN"
-msgstr ""
-#
-msgid ""
-"otcurrent PlugIn for OpenCPN\n"
-"Provides an overlay of Tidal Current (Stream) Arrows.\n"
-"\n"
+msgstr "Plugin otcurrent para OpenCPN"
+
+#: src/otcurrent_pi.cpp:194
+msgid "otcurrent PlugIn for OpenCPN\n"
+"Provides an overlay of Tidal Current (Stream) Arrows.\n\n"
 "\t\t\t   "
-msgstr ""
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "/Settings/otcurrent"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Colors"
-#~ msgstr "Fechar"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Current"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "GRIB"
-#~ msgstr "GRIB"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "GRIB File Directory"
-#~ msgstr "Diretório de Arquivos GRIB"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view invisible overlays:"
-#~ msgstr "Por favor Afaste ou Diminua a Escala para ver HTSGW GRIB suprimido"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed Air Temp.(2m) GRIB"
-#~ msgstr "Por favor Afaste ou Diminua a Escala para ver SEATEMP GRIB suprimido"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed CURRENT GRIB"
-#~ msgstr ""
-#~ "Por favor Afaste ou Diminua a Escala para ver OCEAN CURRENT GRIB suprimido"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed Clouds Cover GRIB"
-#~ msgstr ""
-#~ "Por favor Afaste ou Diminua a Escala para ver OCEAN CURRENT GRIB suprimido"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed Sea Surf.Temp. GRIB"
-#~ msgstr "Por favor Afaste ou Diminua a Escala para ver SEATEMP GRIB suprimido"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Please Zoom or Scale Out to view suppressed Total Rainfall GRIB"
-#~ msgstr "Por favor Afaste ou Diminua a Escala para ver CRAIN GRIB suprimido"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Pressure"
-#~ msgstr "Pressão, hPa"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Pressure (MSL)"
-#~ msgstr "Pressão, hPa"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Sea Temp"
-#~ msgstr "Temperatura da Superfície do Mar, C"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "Show GRIB icon"
-#~ msgstr "Mostrar ícone GRIB"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Sign.Wave Height"
-#~ msgstr "Altura Significativa das Ondas, m"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "Use High Definition Graphics"
-#~ msgstr "Usar Gráficos de Alta Definição"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "WARNING:  QuickScat GRIB data is %d hours old."
-#~ msgstr "AVISO: Dados GRIB são de %d horas atrás."
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Wind Direction(10m)"
-#~ msgstr "Direção do Vento"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Wind Speed and Direction(10m)"
-#~ msgstr "Direção do Vento"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "Wind Speed(10m)"
-#~ msgstr "Veloc. do Vento, Nós"
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#~ msgid "Wind Speed, Kts."
-#~ msgstr "Veloc. do Vento, Nós"
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrent Settings"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentDialogPosX"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentDialogPosY"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentDialogSizeX"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentDialogSizeY"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentFolder"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentInterval"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentUseDirection"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentUseFillColour"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "otcurrentUseRate"
-#~ msgstr "Velocidade da Corrente, Nós."
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#
-#, fuzzy
-#~ msgid "tcdata"
-#~ msgstr "Dados GRIB"
+msgstr "Plugin otcurrent para OpenCPN\n"
+"Disponibiliza uma sobreposição de Setas de Correntes de Marés (fluxo).\n\n"
+"\t\t\t   "
+
